# mjai-reviewer

./: .all-contributorsrc  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  faq.md  mjsoul.adoc  package-win.sh  tactics.json
.github/: FUNDING.yml
.github/workflows/: build.yml  rust.yml
convlog/: Cargo.toml  README.md
convlog/scripts/: tenhou_dl.sh
convlog/src/: conv.rs  kyoku_filter.rs  lib.rs  macros.rs  mjai.rs  pai.rs  tenhou.rs  tile.rs
convlog/src/tenhou/: json_scheme.rs  log.rs  mod.rs  tile.rs
convlog/src/tests/: mod.rs
convlog/src/tests/testdata/: chankan.json  rinshan.json
convlog/tests/: parse_and_convert.rs  split_raw_log.rs  tests.rs
convlog/tests/testdata/: complex_nakis.json  complex_nakis_1.json  confusing_nakis_0.json  confusing_nakis_1.json  confusing_nakis_2.json  confusing_nakis_3.json  confusing_nakis_4.json  confusing_nakis_5.json  confusing_nakis_6.json  confusing_nakis_7.json  double_kakan_then_chankan.json  double_ron.json  four_reach.json  kyushukyuhai.json  mod.rs  ranked_game.json  ryukyoku.json  suukantsu_0.json  suukantsu_1.json
locales/en/: main.ftl
locales/en-US/: main.ftl
locales/ja/: main.ftl
locales/ja-JP/: main.ftl
locales/ko/: main.ftl
locales/zh/: main.ftl
reviewer/: Cargo.toml  build.rs  tactics.json
reviewer/res/: pai_assets.html
reviewer/src/: main.rs  render.rs  review.rs
reviewer/templates/: report.html
src/: download.rs  kyoku_filter.rs  log.rs  log_source.rs  main.rs  metadata.rs  mjsoul_deobfuse.rs  opts.rs  raw_log_ext.rs  render.rs  report_output.rs  review.rs  softmax.rs  state.rs  tactics.rs  tehai.rs
src/review/: akochan.rs  mod.rs  mortal.rs
templates/: macros.html  macros.tera  report.css  report.html  report.js  report.tera
