[package]
name = "akochan-reviewer"
version = "0.1.6"
authors = ["Equim <sayaka@ekyu.moe>"]
edition = "2018"
repository = "https://github.com/Equim-chan/akochan-reviewer"
license = "Apache-2.0"
description = "🀄️ Review your Tenhou log with mahjong AI akochan."
build = "build.rs"

[dependencies]
convlog = { path = "./convlog" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
once_cell = "1.3.1"
chrono = "0.4"
clap = "2.33"
ureq = "0.12"
tee = "0.1.0"
opener = "0.4.1"
dunce = "1"
humantime-serde = "1"
tempfile = "3.1.0"
env_proxy = "0.3"

[build-dependencies]
anyhow = "1.0"
tera = "1"
chrono = "0.4"

[workspace]
members = [
    ".",
    "convlog",
]

[profile.release]
lto = true
debug = false
codegen-units = 1
