[package]
name = "convlog"
version = "0.1.0"
authors = ["Equim <sayaka@ekyu.moe>"]
edition = "2018"

[[bin]]
name = "convlog"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_tuple = "0.4.0"
serde_repr = "0.1"
thiserror = "1.0"
once_cell = "1.3.1"
num_enum = "0.4.3"
serde_with = "1.9.0"
