[package]
name = "convlog"
version = "0.2.0"
authors = ["Equim <sayaka@ekyu.moe>"]
edition = "2021"

[dependencies]
serde_json = "1"
serde_tuple = "0.5"
serde_repr = "0.1"
thiserror = "1"
once_cell = "1"
num_enum = "0.5"
ahash = "0.8"
serde_with = "2"
serde = { version = "1", features = ["derive"] }
